--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>PrimeLogix - Terms & Conditions</title>
+  <title>Prime LogistX - Terms & Conditions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; line-height: 1.6; padding: 20px; max-width: 900px; margin: auto; }
